--- a/Manuel de réparation Vectrex.lyx
+++ b/Manuel de réparation Vectrex.lyx
@@ -76,27 +76,45 @@
 \begin_body
 
 \begin_layout Title
+
+\series bold
+\size huge
 Vectrex - Manuel de réparation
 \end_layout
 
 \begin_layout Author
 par Nicolas Weill
-\end_layout
+\begin_inset Newline newline
+\end_inset
 
-\begin_layout Author
-Avec l'aide de Flore Neter
-\end_layout
+avec l'assistance de Flore Neter
+\begin_inset Newline newline
+\end_inset
 
-\begin_layout Author
 Relecture par les membres de l'association MO5
+\begin_inset Newline newline
+\end_inset
+
+
+\begin_inset Newline newline
+\end_inset
+
+Remerciement psécial à Pascal, Jeremy et Gérald pour leur Vectrex
 \end_layout
 
 \begin_layout Date
-Révision du 19 février 2022
+Révision du 27 février 2022
 \end_layout
 
-\begin_layout Quote
-Merci d'envoyer vos commentaire, correction ou proposition de traduction
+\begin_layout Standard
+\begin_inset VSpace vfill
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+*Merci d'envoyer vos commentaires, corrections ou propositions de traduction
  sur le Github 
 \begin_inset CommandInset href
 LatexCommand href
@@ -130,14 +148,17 @@ LatexCommand tableofcontents
 \end_layout
 
 \begin_layout Section
+
+\lang french
 Précaution
 \end_layout
 
 \begin_layout Standard
-Les console Vectrex contiennent un tube cathodique.
+Les consoles Vectrex contiennent un tube cathodique.
  De hautes tensions sont présentes dans l'équipement électronique, même
- après arrêt de la console.
- Ne manipuler pas une Vectrex sans connaissance électronique spécifique.
+ après l'arrêt de la console.
+ Ne manipuler pas une Vectrex sans les connaissances électronique spécifiques
+ requises.
 \end_layout
 
 \begin_layout Section
@@ -160,8 +181,8 @@ Vérifier l'interrupteur SW301.
 \begin_layout Itemize
 Vérifier le fusible F101.
  Remplacer le fusible si besoin.
- Si le fusible saute systématyquement, le cas le plus fréquent de court
- circuit se situe sur les composant IC101 (LM340), IC102 (7905) et IC401
+ Si le fusible saute systématiquement, les cas les plus fréquents de court
+ circuit se situent sur les composant IC101 (LM340), IC102 (7905) et IC401
  (LM379).
 \end_layout
 
@@ -222,17 +243,17 @@ int blanc.
 \end_layout
 
 \begin_layout Itemize
-Un problème d'image rare mais difficile a diagnotiquer peut provenir du
+Un problème d'image rare mais difficile à diagnotiquer peut provenir du
  cable J301.
- Les contact à l'interieur sont sertis et non soudés.
+ Les contacts à l'interieur sont sertis et non soudés.
  Il est donc possible de voir apparitre de l'oxydation sur les contact ou
  dans la jonction cable-contact.
  Ce problème est invisble de l'extéruieur et nécessite de retirer les contacts
  du cable pour inspection.
 \end_layout
 
-\begin_layout Standard
-Problème rare d'image ce décalant lors des mouvement de l manette : remplacer
+\begin_layout Itemize
+Problème rare d'image se décalant lors des mouvements de la manette : remplacer
  IC302 (CD4052D).
 \begin_inset Newpage pagebreak
 \end_inset
@@ -251,16 +272,17 @@ Une approche efficace de diagnotic consiste à diviser le circuit en section
 
 \begin_layout Itemize
 Commencer toujours par vérifier le fonctionnement de l'interrupteur SW301.
- Celui-ci peut-être partiellement défectueux, Les niveaux de tension seront
- néanmoins correct.
- Mais une seul des deux bobines du secondaire du transformateur T102 sera
- exploiter, générant une usure et une surchauffe de plusieurs éléments de
+ Celui-ci peut-être partiellement défectueux.
+ Les niveaux de tensions seront néanmoins correct.
+ Mais une seule des deux bobines du secondaire du transformateur T102 sera
+ exploité, générant une usure et une surchauffe de plusieurs éléments de
  l'alimentaion.
- Incit 
+ Ainci qu'une instabillité plus grande sur les niveaux de tension.
+ Ce qui générera des vibration de l'image.
 \end_layout
 
 \begin_layout Itemize
-Commencer par vérifier les niveau de tension sur le connecteur J204.
+Vérifier les niveau de tension sur le connecteur J204.
 \end_layout
 
 \begin_layout Itemize
@@ -269,8 +291,28 @@ Vérifier les broches 3, 6,9 et 10 de IC302 (4052B).
  dans la partie numérique de la LogicBoard (IC201 à IC208, IC301 et IC304).
 \end_layout
 
+\begin_layout Section
+Schématique
+\end_layout
+
+\begin_layout Subsection
+PowerBoard
+\end_layout
+
 \begin_layout Standard
-\begin_inset Newpage pagebreak
+Coming soon !
+\end_layout
+
+\begin_layout Subsection
+LogicBoard
+\end_layout
+
+\begin_layout Standard
+\begin_inset External
+	template PDFPages
+	filename Schematic/LogicBoard 3GE.pdf
+	extra LaTeX "fitpaper"
+
 \end_inset
 
 
@@ -289,7 +331,7 @@ Les relevés d'oscilloscope sont classés par identifiant de composant..
 IC201 - 2363
 \end_layout
 
-\begin_layout Quote
+\begin_layout Description
 Description: ROM interne contenant le programme d'initialisation de la Vectrex,
  ainsi que le jeu Minestorm.
 \end_layout
@@ -321,18 +363,54 @@ Une corruption de la ROM peut être détecté par un reset régulier du processe
 \end_layout
 
 \begin_layout Standard
-Il est necessaire de disposer d'une autre ROM déjà programmé pour remplacer
+Il est necessaire de disposer d'une autre ROM déjà programmée pour remplacer
  IC201.
  Il est possible de remplacer la ROM par une EPROM de type 27C64.
 \end_layout
 
 \begin_layout Standard
-La lecture du contenu de la ROM dans un programmeur composanttble doit retourner
+La lecture du contenu de la ROM dans un programmeur compatible doit retourner
  les checksums 7931, B796 ou 7ADB.
- Les différentes version de ROM sont interchangeables dans les différentes
- version de Vectrex.
- La version la plus réçente, et donc a préféré, est la version dont le checksum
- est 7ADB.
+ Les différentes versions de ROM sont interchangeables dans les différentes
+ versions de Vectrex.
+ La version la plus réçente, et donc à préférer, est la version dont le
+ checksum est 7ADB.
+\end_layout
+
+\begin_layout Subsubsection
+Broche 1 (VPP)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 2 à 10, 21, 23, 24,25 (A0 à A12)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 11 à 13 et 15 à 19 (D0 à D7)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 14 (GND)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 20 (Chip Enable)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 22 (Output Enable)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 26 (Non connecté)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 27 (Programmation)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 28 (VCC)
 \begin_inset Newpage pagebreak
 \end_inset
 
@@ -343,12 +421,12 @@ La lecture du contenu de la ROM dans un programmeur composanttble doit retourner
 IC202 - 74LS00
 \end_layout
 
-\begin_layout Standard
+\begin_layout Description
 Description: Quadruple porte NAND
 \end_layout
 
 \begin_layout Subsubsection
-Broche 1, 2
+Broche 1 et 2 (Porte 1 entrée 1 et 2)
 \end_layout
 
 \begin_layout Standard
@@ -371,7 +449,7 @@ Les broches 1 & 2 sont connectés à la broche 34 du processeur IC206 (broche
 \end_layout
 
 \begin_layout Subsubsection
-Broche 3
+Broche 3 (Porte 1 sortie)
 \end_layout
 
 \begin_layout Standard
@@ -392,7 +470,7 @@ En cas d'absence de signal, vérifier les broches 1 et 2 de IC202.
 \end_layout
 
 \begin_layout Subsubsection
-Broche 4 et 5
+Broche 4 et 5 (Porte 2 entrée 1 et 2)
 \end_layout
 
 \begin_layout Standard
@@ -416,7 +494,7 @@ Les broches 4 et 5 soint connectées aux ligneq d'adresseq A15 et A14 du
 \end_layout
 
 \begin_layout Subsubsection
-Broche 6
+Broche 6 (Porte 2 sortie)
 \end_layout
 
 \begin_layout Standard
@@ -440,7 +518,7 @@ Cette broche est connectée a la broche OE (Output Enable) de la ROM IC201.
 \end_layout
 
 \begin_layout Subsubsection
-Broche 7
+Broche 7 (GND)
 \end_layout
 
 \begin_layout Standard
@@ -448,7 +526,7 @@ Masse, 0V
 \end_layout
 
 \begin_layout Subsubsection
-Broche 8
+Broche 8 (Porte 3 sortie)
 \end_layout
 
 \begin_layout Standard
@@ -464,7 +542,7 @@ Broche 8
 \end_layout
 
 \begin_layout Subsubsection
-Broche 9
+Broche 9 (Porte 3 entrée 1)
 \end_layout
 
 \begin_layout Standard
@@ -486,7 +564,7 @@ La broche 9 est connectés à la broche 34 du processeur IC206 (broche Enable).
 \end_layout
 
 \begin_layout Subsubsection
-Broche 10
+Broche 10 (Porte 3 entrée 2)
 \end_layout
 
 \begin_layout Standard
@@ -502,7 +580,7 @@ Broche 10
 \end_layout
 
 \begin_layout Subsubsection
-Broche 11
+Broche 11 (Porte 4 sortie)
 \end_layout
 
 \begin_layout Standard
@@ -518,7 +596,7 @@ Broche 11
 \end_layout
 
 \begin_layout Subsubsection
-Broche 12
+Broche 12 (Porte 4 entrée 1)
 \end_layout
 
 \begin_layout Standard
@@ -534,7 +612,7 @@ Broche 12
 \end_layout
 
 \begin_layout Subsubsection
-Broche 13
+Broche 13 (Porte 4 entrée 2)
 \end_layout
 
 \begin_layout Standard
@@ -556,7 +634,7 @@ La broche 13 est connectés à la broche 34 du processeur IC206 (broche Enable).
 \end_layout
 
 \begin_layout Subsubsection
-Broche 14
+Broche 14 (VCC)
 \end_layout
 
 \begin_layout Standard
@@ -574,12 +652,8 @@ Alimentation +5V continu.
 IC203 - 74LS32
 \end_layout
 
-\begin_layout Standard
+\begin_layout Description
 Description: Quadruple porte OR
-\begin_inset VSpace defskip
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
@@ -593,7 +667,7 @@ Description: Quadruple porte OR
 \end_layout
 
 \begin_layout Subsubsection
-Broche 1
+Broche 1 (Porte 1 entrée 1)
 \end_layout
 
 \begin_layout Standard
@@ -609,7 +683,7 @@ Broche 1
 \end_layout
 
 \begin_layout Subsubsection
-Broche 2
+Broche 2 (Porte 1 entrée 2)
 \end_layout
 
 \begin_layout Standard
@@ -625,7 +699,7 @@ Broche 2
 \end_layout
 
 \begin_layout Subsubsection
-Broche 3
+Broche 3 (Porte 1 sortie)
 \end_layout
 
 \begin_layout Standard
@@ -641,7 +715,7 @@ Broche 3
 \end_layout
 
 \begin_layout Subsubsection
-Broche 4
+Broche 4 (Porte 2 entrée 1)
 \end_layout
 
 \begin_layout Standard
@@ -657,7 +731,7 @@ Broche 4
 \end_layout
 
 \begin_layout Subsubsection
-Broche 5
+Broche 5 (Porte 2 entrée 2)
 \end_layout
 
 \begin_layout Standard
@@ -673,7 +747,7 @@ Broche 5
 \end_layout
 
 \begin_layout Subsubsection
-Broche 6
+Broche 6 (Porte 2 sortie)
 \end_layout
 
 \begin_layout Standard
@@ -689,7 +763,7 @@ Broche 6
 \end_layout
 
 \begin_layout Subsubsection
-Broche 7
+Broche 7 (GND)
 \end_layout
 
 \begin_layout Standard
@@ -697,7 +771,7 @@ Masse, 0V
 \end_layout
 
 \begin_layout Subsubsection
-Broche 8
+Broche 8 (Porte 3 sorite)
 \end_layout
 
 \begin_layout Standard
@@ -713,7 +787,7 @@ Broche 8
 \end_layout
 
 \begin_layout Subsubsection
-Broche 9
+Broche 9 (Porte 3 entrée 1)
 \end_layout
 
 \begin_layout Standard
@@ -729,7 +803,7 @@ Broche 9
 \end_layout
 
 \begin_layout Subsubsection
-Broche 10
+Broche 10 (Porte 3 entrée 2)
 \end_layout
 
 \begin_layout Standard
@@ -745,7 +819,7 @@ Broche 10
 \end_layout
 
 \begin_layout Subsubsection
-Broche 11
+Broche 11 (Porte 4 sortie)
 \end_layout
 
 \begin_layout Standard
@@ -761,7 +835,7 @@ Broche 11
 \end_layout
 
 \begin_layout Subsubsection
-Broche 12
+Broche 12 (Porte 4 entrée 1)
 \end_layout
 
 \begin_layout Standard
@@ -777,7 +851,7 @@ Broche 12
 \end_layout
 
 \begin_layout Subsubsection
-Broche 13
+Broche 13 (Porte 4 entrée 2)
 \end_layout
 
 \begin_layout Standard
@@ -793,7 +867,7 @@ Broche 13
 \end_layout
 
 \begin_layout Subsubsection
-Broche 14
+Broche 14 (VCC)
 \end_layout
 
 \begin_layout Standard
@@ -808,8 +882,32 @@ Alimentation +5V continu.
 IC204, IC205 - 2114
 \end_layout
 
-\begin_layout Standard
-RAM
+\begin_layout Description
+Description: RAM
+\end_layout
+
+\begin_layout Subsubsection
+Broche 1 à 7, 15, 16, 17 (A0 à A9)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 8 (Chip Select)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 9 (GND)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 10 (Write Enable)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 11 à 14 (DA à DD)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 18 (VCC)
 \begin_inset Newpage pagebreak
 \end_inset
 
@@ -820,8 +918,8 @@ RAM
 IC206 - 68A09
 \end_layout
 
-\begin_layout Standard
-CPU
+\begin_layout Description
+Decription: Processeur 8bits cadencé à 1,5 MHz
 \begin_inset Newpage pagebreak
 \end_inset
 
@@ -832,8 +930,8 @@ CPU
 IC207 - 6522
 \end_layout
 
-\begin_layout Standard
-Extension de port pour processeur 68A09
+\begin_layout Description
+Decription: Extension de port pour processeur 68A09
 \begin_inset Newpage pagebreak
 \end_inset
 
@@ -844,8 +942,52 @@ Extension de port pour processeur 68A09
 IC208 - AY-3-8912
 \end_layout
 
-\begin_layout Standard
-Générateur de son
+\begin_layout Description
+Description: Générateur de son
+\end_layout
+
+\begin_layout Subsubsection
+Broche 1, 4 et 5 (CHC, CHB, CHA)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 3 (VCC)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 6 (GND)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 7 à 14 (IO0 à IO7)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 15 (Clock)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 16 (Reset)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 17 (A8)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 18 (BDir)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 19 (BC2)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 20 (BC1)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 21 à 28 (BUS0 à BUS7)
 \begin_inset Newpage pagebreak
 \end_inset
 
@@ -856,8 +998,74 @@ Générateur de son
 IC301 - MC-1408P8
 \end_layout
 
-\begin_layout Standard
-Le MC-1408P8 est un convertisseur numérique-analogique 8 bits.
+\begin_layout Description
+Description: convertisseur numérique-analogique 8 bits.
+\end_layout
+
+\begin_layout Subsubsection
+Broche 1 (Range / Non connecté)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 2 (GND)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 3 (VEE)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 4 (I
+\begin_inset script subscript
+
+\begin_layout Plain Layout
+OUT
+\end_layout
+
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 5 à 12 (Bit)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 13 (VCC)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 14 (V
+\begin_inset script subscript
+
+\begin_layout Plain Layout
+REF+
+\end_layout
+
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 15 (V
+\begin_inset script subscript
+
+\begin_layout Plain Layout
+REF-
+\end_layout
+
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 16 (Compensation)
+\end_layout
+
+\begin_layout Description
 \begin_inset Newpage pagebreak
 \end_inset
 
@@ -868,8 +1076,8 @@ Le MC-1408P8 est un convertisseur numérique-analogique 8 bits.
 IC302 - 4052B
 \end_layout
 
-\begin_layout Standard
-Le CD4052 est un double multiplexeur/démultiplexeur.
+\begin_layout Description
+Description: double multiplexeur/démultiplexeur.
 \begin_inset VSpace defskip
 \end_inset
 
@@ -905,30 +1113,15 @@ Le second multiplexeur est utilisé pour sélectionner le potentiomètre des
 \end_layout
 
 \begin_layout Subsubsection
-Broche 13 (Entrée)
-\end_layout
-
-\begin_layout Standard
-\begin_inset Graphics
-	filename Images/IC302/pin13.bmp
-	width 100text%
-	BoundingBox 29bp 81bp 532bp 484bp
-	clip
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-En cas d'absence de signal, vérifier les signaux sur les broches 5 à 12
- de IC301 (MC-1408P8), vérifier la présence de la tension -13V sur le cable
- d'alimetation J204.
- Si tous ces signaux sont correct, remplacer IC301 et IC304.
+Broche 1, 2, 4 et 5 (Y channels In/Out)
 \end_layout
 
 \begin_layout Subsubsection
-Broche 6 (Entrée)
+Broche 3 (Common Y)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 6 (Inhibit)
 \end_layout
 
 \begin_layout Standard
@@ -948,7 +1141,15 @@ En cas d'absence de signal, remplacer IC207 (PIA 6522)
 \end_layout
 
 \begin_layout Subsubsection
-Broche 9 et 10 (Entrée)
+Broche 7 (VEE)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 8 (GND)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 9 et 10 (Select A et B)
 \end_layout
 
 \begin_layout Standard
@@ -968,7 +1169,11 @@ En cas d'absence de signal, remplacer IC207 (PIA 6522)
 \end_layout
 
 \begin_layout Subsubsection
-Broche 12 (Sortie)
+Broche 11 (X Channel 3)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 12 (X Channel 0)
 \end_layout
 
 \begin_layout Standard
@@ -998,7 +1203,41 @@ En cas de signal déformé, vérifier les signaux sur les broches 6, 9, 10
 \end_layout
 
 \begin_layout Subsubsection
-Broche 15 (Sortie)
+Broche 13 (Common X)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC302 broche 13"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC302/pin13.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+En cas d'absence de signal, vérifier les signaux sur les broches 5 à 12
+ de IC301 (MC-1408P8), vérifier la présence de la tension -13V sur le cable
+ d'alimetation J204.
+ Si tous ces signaux sont correct, remplacer IC301 et IC304.
+\end_layout
+
+\begin_layout Subsubsection
+Broche 14 (X Channel 1)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 15 (X Channel 2)
 \end_layout
 
 \begin_layout Standard
@@ -1025,6 +1264,110 @@ En cas de signal déformé, vérifier les signaux sur les broches 6, 9, 10
  et 13.
  Vérifier la présence de la tension -5V sur le cable d'alientation J204.
  Si tous ces signaux sont correct, alors remplacer le CD4052B.
+\end_layout
+
+\begin_layout Subsubsection
+Broche 16 (VDD)
+\end_layout
+
+\begin_layout Standard
++5V analogique
+\end_layout
+
+\begin_layout Subsection
+IC303 - LF347
+\end_layout
+
+\begin_layout Subsubsection
+Broche 1 (Sortie)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 2 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 3 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 4
+\end_layout
+
+\begin_layout Subsubsection
+Broche 5 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 6 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 7 (Sortie)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 8 (Sortie)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 9 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 10 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 11
+\end_layout
+
+\begin_layout Subsubsection
+Broche 12 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 13 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 14 (Sortie)
+\end_layout
+
+\begin_layout Subsection
+IC304 - LF353
+\end_layout
+
+\begin_layout Subsubsection
+Broche 1 (Sortie)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 2 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 3 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 4
+\end_layout
+
+\begin_layout Subsubsection
+Broche 5 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 6 (Entrée)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 7 (Sortie)
+\end_layout
+
+\begin_layout Subsubsection
+Broche 8
 \end_layout
 
 \begin_layout Subsection
@@ -1128,11 +1471,11 @@ Broche 6 (Entrée)
 \end_layout
 
 \begin_layout Subsubsection
-Broche 7 (Alimentation)
+Broche 7 (VSS)
 \end_layout
 
 \begin_layout Standard
--5V
+-5V analogique
 \end_layout
 
 \begin_layout Subsubsection
@@ -1140,11 +1483,13 @@ Broche 8 (Entrée)
 \end_layout
 
 \begin_layout Standard
-\begin_inset Graphics
-	filename Images/IC305/pin8.bmp
-	width 100text%
-	BoundingBox 29bp 81bp 532bp 484bp
-	clip
+Voir 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC302 broche 13"
+plural "false"
+caps "false"
+noprefix "false"
 
 \end_inset
 
@@ -1232,12 +1577,947 @@ Broche 13 (Entrée)
 \end_layout
 
 \begin_layout Subsubsection
-Broche 14 (Alimentation)
+Broche 14 (VDD)
 \end_layout
 
 \begin_layout Standard
-+5V
++5V analogique
+\end_layout
+
+\begin_layout Standard
 \begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Documentation technique et composant de substitution
+\end_layout
+
+\begin_layout Standard
+\begin_inset Tabular
+<lyxtabular version="3" rows="26" columns="3">
+<features tabularvalignment="middle">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<row>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Référence
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Nom
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Documentation technique
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="3" alignment="center" valignment="middle" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC101
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LM340
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/gpn/lm340"
+target "https://www.ti.com/lit/gpn/lm340"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="4" alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LM7805
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/gpn/lm7800"
+target "https://www.ti.com/lit/gpn/lm7800"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC102
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LM7905
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/gpn/lm79"
+target "https://www.ti.com/lit/gpn/lm79"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC103
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LM386-3
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/lm386.pdf"
+target "https://www.ti.com/lit/ds/symlink/lm386.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="3" alignment="center" valignment="middle" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC201
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+2363
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="4" alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="4" alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+M27C64
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.mouser.fr/datasheet/2/389/stmicroelectronics_cd00000519-1204359.pdf"
+target "https://www.mouser.fr/datasheet/2/389/stmicroelectronics_cd00000519-1204359.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC202
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+74LS00
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/sn5400.pdf"
+target "https://www.ti.com/lit/ds/symlink/sn5400.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC203
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+74LS32
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/sn54ls32-sp.pdf"
+target "https://www.ti.com/lit/ds/symlink/sn54ls32-sp.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="3" alignment="center" valignment="middle" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC204
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+2114
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://hardware.speccy.org/datasheet/2114.pdf"
+target "https://hardware.speccy.org/datasheet/2114.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="4" alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+TMM314AP
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://console5.com/techwiki/images/7/7c/TMM314APL.pdf"
+target "https://console5.com/techwiki/images/7/7c/TMM314APL.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="3" alignment="center" valignment="middle" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC205
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+2114
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://hardware.speccy.org/datasheet/2114.pdf"
+target "https://hardware.speccy.org/datasheet/2114.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="4" alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+TMM314AP
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://console5.com/techwiki/images/7/7c/TMM314APL.pdf"
+target "https://console5.com/techwiki/images/7/7c/TMM314APL.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC206
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+68A09
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC207
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+6522A
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC208
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+AY3-8912
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://console5.com/techwiki/images/f/f5/GI-AY-8910---AY-8912---AY-8913.pdf"
+target "https://console5.com/techwiki/images/f/f5/GI-AY-8910---AY-8912---AY-8913.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="3" alignment="center" valignment="middle" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC301
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+MC1408P8
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="4" alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+DAC0808
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/dac0808.pdf"
+target "https://www.ti.com/lit/ds/symlink/dac0808.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC302
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+4052B
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/cd4051b.pdf"
+target "https://www.ti.com/lit/ds/symlink/cd4051b.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC303
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LF347
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/lf147.pdf"
+target "https://www.ti.com/lit/ds/symlink/lf147.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC304
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LF353
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/lf353.pdf"
+target "https://www.ti.com/lit/ds/symlink/lf353.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC305
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+4066B
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/ds/symlink/cd4066b-mil.pdf"
+target "https://www.ti.com/lit/ds/symlink/cd4066b-mil.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC401
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LM379
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://console5.com/techwiki/images/0/02/LM379.pdf"
+target "https://console5.com/techwiki/images/0/02/LM379.pdf"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="3" alignment="center" valignment="middle" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+IC501
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+LM555
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/gpn/lm555"
+target "https://www.ti.com/lit/gpn/lm555"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell multirow="4" alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+NE555
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset CommandInset href
+LatexCommand href
+name "https://www.ti.com/lit/gpn/ne555"
+target "https://www.ti.com/lit/gpn/ne555"
+literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+</lyxtabular>
+
 \end_inset
 
 
