Correct inversion bus on IC301
Bus is inverted in Shematic on IC301.

--- a/Manuel de réparation Vectrex.lyx
+++ b/Manuel de réparation Vectrex.lyx
@@ -104,7 +104,7 @@ Relecture par les membres de l'association MO5
 \end_layout
 
 \begin_layout Date
-Révision du 13 juin 2022
+Révision du 18 juillet 2022
 \end_layout
 
 \begin_layout Standard
@@ -169,7 +169,6 @@ Précaution
 \end_layout
 
 \begin_layout New Color Box Type
-
 \begin_inset Argument 1
 status open
 
