--- a/Manuel de réparation Vectrex.lyx
+++ b/Manuel de réparation Vectrex.lyx
@@ -104,7 +104,7 @@ Relecture par les membres de l'association MO5
 \end_layout
 
 \begin_layout Date
-Révision du 18 juillet 2022
+Révision du 06 septembre 2022
 \end_layout
 
 \begin_layout Standard
